# fast_api_learning

./: pyproject.toml
fast_duno/: app.py  database.py  security.py  settings.py
fast_duno/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: a896a46ff8cf_add_updated_at_to_user.py  c6804557fc1e_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
